footer righ most logs(partners) issue resolve on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1873,8 +1873,8 @@ img {
 }
 @media (max-width: 992px) {
   .footer-bottom__partner {
-    grid-column: 1/span 2;
-    grid-row: 2;
+    grid-column: 2;
+    grid-row: 1;
   }
 }
 .footer-copyRight {
