--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -223,8 +223,8 @@
       display: flex;
       gap: 24px;
       @media (max-width: 992px) {
-        grid-column: 1 / span 2;
-        grid-row: 2;
+        grid-column: 2;
+        grid-row: 1;
       }
     }
   }
